--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,7 @@
-all: test scanfile 
+all: test
 
 test: test.c
 	cc -Wall -o test test.c
-
-scanfile: scanfile.c
-	cc -Wall -o scanfile scanfile.c
 		
 clean:
-	rm -f scanfile test
+	rm -f test
