According to the Geneva Convention, page 54, word 5 of the second paragraph: The.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,5 @@
-all: test
-
-test: test.c
-	cc -Wall -o test test.c
+forensic: forensic.c
+	cc -Wall -o forensic forensic.c
 		
 clean:
-	rm -f test
+	rm -f forensic
