--- a/PROJ2/src/Makefile
+++ b/PROJ2/src/Makefile
@@ -1,10 +1,16 @@
 CC=gcc
 CFLAGS=-I.
 DEPS = constants.h sope.h types.h
-OBJ = log.c server.c user.c
+OBJ_SERV = log.c server.c
+OBJ_USER = log.c user.c
 
 %.o: %.c $(DEPS)
 	$(CC) -c -o $@ $< $(CFLAGS)
 
-make: $(OBJ)
+user: $(OBJ_USER)
 	$(CC) -o $@ $^ $(CFLAGS)
+
+server: $(OBJ_SERV)
+	$(CC) -o $@ $^ $(CFLAGS)
+
+clean: rm -f user server
