organizacao de ficheiros (semi). muuito progresso: criacao de contas / envio de pedidos

--- a/PROJ2/src/Makefile
+++ b/PROJ2/src/Makefile
@@ -1,8 +1,8 @@
 CC=gcc
-CFLAGS=-I.
-DEPS = constants.h sope.h types.h
-OBJ_SERV = log.c server.c
-OBJ_USER = log.c user.c
+CFLAGS=-I. -D_REENTRANT -lpthread
+DEPS = constants.h sope.h types.h argProcessing.h fifoMaker.h accounts.h
+OBJ_SERV = log.c server.c fifoMaker.c argProcessing.c accounts.c
+OBJ_USER = log.c user.c fifoMaker.c argProcessing.c
 
 %.o: %.c $(DEPS)
 	$(CC) -c -o $@ $< $(CFLAGS)
