--- a/PROJ2/src/Makefile
+++ b/PROJ2/src/Makefile
@@ -1,7 +1,7 @@
 CC=gcc
 CFLAGS=-I. -D_REENTRANT -lpthread
-DEPS = constants.h sope.h types.h argProcessing.h fifoMaker.h accounts.h bankoffice.h logfileopeners.h
-OBJ_SERV = log.c server.c fifoMaker.c argProcessing.c accounts.c bankoffice.c logfileopeners.c
+DEPS = constants.h sope.h types.h argProcessing.h fifoMaker.h accounts.h bankoffice.h logfileopeners.h queue.h
+OBJ_SERV = log.c server.c fifoMaker.c argProcessing.c accounts.c bankoffice.c logfileopeners.c queue.c
 OBJ_USER = log.c user.c fifoMaker.c argProcessing.c logfileopeners.c
 
 %.o: %.c $(DEPS)
